syntax = "proto3";

package kvstore;

service KVStore {
    rpc Put (PutRequest) returns (PutResponse);
    rpc Get (GetRequest) returns (GetResponse);
    rpc List (ListRequest) returns (ListResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    rpc DeleteAll (DeleteAllRequest) returns (DeleteAllResponse);
    rpc Watch (WatchRequest) returns (stream WatchResponse);
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    bool success = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

message ListRequest {
    string prefix = 1;
}

message ListResponse {
    repeated KeyValue items = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    bool success = 1;
}

message DeleteAllRequest {
}

message DeleteAllResponse {
    bool success = 1;
}

message WatchRequest {
    string key = 1;
}

message WatchResponse {
    uint64 watch_id = 1;
    repeated Event events = 2;
}

message KeyValue {
    string key = 1;
    string value = 2;
}

message Event {
    enum EventType {
        PUT = 0;
        DELETE = 1;
    }
    EventType type = 1;
    KeyValue kv = 2;
}